# JobHunter

./: .env.example  .gitignore  README.md  pyproject.toml  run_locally.sh
.github/workflows/: daily.yml
data/: apec_feeds.yaml  employers.yaml  seen_jobs.db  target_titles.yaml
src/job_hunter/: __init__.py  cli.py  config.py  dedup.py  models.py  normalizer.py  reporter.py  sheet_writer.py
src/job_hunter/collectors/: __init__.py  apec_rss_collector.py  base.py  careers_sites_collector.py  france_travail_collector.py  jobspy_collector.py
src/job_hunter/scoring/: __init__.py  aggregator.py  hard_skills.py  location.py  soft_skills.py  tier.py  title_match.py
tests/: conftest.py  test_dedup.py  test_normalizer.py  test_scoring_aggregator.py  test_scoring_hard_skills.py  test_scoring_location.py  test_scoring_tier.py  test_scoring_title_match.py
