[project]
name = "job-hunter"
version = "0.1.0"
description = "Veille emploi quotidienne : collecte multi-sources, dédup, scoring, Google Sheet"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy @ git+https://github.com/speedyapply/JobSpy.git@main",
    "httpx>=0.27",
    "feedparser>=6.0",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "selectolax>=0.3.20",
    "typer>=0.12",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "truststore>=0.10",  # vérif TLS via le magasin de certificats de l'OS (proxy/CA d'entreprise)
]

[project.scripts]
job-hunter = "job_hunter.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_hunter"]

[tool.hatch.metadata]
# Requis par hatchling pour accepter la dépendance git directe (JobSpy)
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
